# emscripten-template

./: CMakeLists.txt  README.md
emscripten/: shell.html
scripts/: build-emscripten.sh  run-emscripten.sh  zip-for-itch.sh
src/: main.cpp
